# tabular_fms_nirvana

./: README.md  cd_utils.py  config.py  feature_pipeline.py  inference.py  main.py  pyproject.toml  table_processor.py
docker/: Dockerfile  pyproject.toml
lib/: metrics.py  util.py
lib/tfm/: __init__.py  base.py  tabicl_wrapper.py
lib/tfm/tabicl/sklearn/: __init__.py  base.py  classifier.py  regressor.py
nirvana_stuff/: __init__.py  snapshots.py  yt_output.py
tabfm_prod.egg-info/: PKG-INFO  SOURCES.txt
yt_dataloader/: __init__.py  dataloader.py  multiprocess_reader.py  table_processors.py
